tests/neg/i2494.scala
enum // error
object // error // error
